# proveria-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: getting-started.md
src/: main.rs
