[package]
name = "proveria"
description = "Proveria CLI for local hashing, attestations, receipts, and API workflows"
edition = "2024"
license-file = "LICENSE"
version = "0.1.1"

[[bin]]
name = "proveria"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"
hex = "0.4"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
unicode-normalization = "0.1"
